fix: spacing for modals

--- a/components/HintModal.module.css
+++ b/components/HintModal.module.css
@@ -1,31 +1,20 @@
 .header {
-  margin-bottom: 80px;
+  margin-bottom: auto;
   margin-top: 20px;
 }
 
 .modal__button {
   width: 70%;
   height: 13%;
-  margin-top: 10px;
+  margin-top: auto;
+  margin-bottom: 20px;
   background-color: #393e46;
   color: white;
   font-size: 20px;
   font-family: "century gothic";
   border-radius: 5px;
   border: none;
-  align-items: "center";
 }
-
-/* .modal__button {
-  width: 70%;
-  height: 13%;
-  background-color: #393e46;
-  color: white;
-  font-size: 20px;
-  font-family: "century gothic";
-  border-radius: 5px;
-  border: none;
-} */
 
 .modal__button:hover {
   background-color: #616a79;
