--- a/components/WinModal.module.css
+++ b/components/WinModal.module.css
@@ -1,12 +1,11 @@
 .header {
-  margin-bottom: 80px;
+  margin-bottom: auto;
   margin-top: 20px;
 }
 
 .modal__button {
   width: 70%;
   height: 13%;
-  margin-top: 10px;
   background-color: #393e46;
   color: white;
   font-size: 20px;
@@ -21,5 +20,10 @@
 }
 
 #firstButton {
-  margin-top: 80px;
+  margin-top: auto;
+  margin-bottom: 10px;
+}
+
+#secondButton {
+  margin-bottom: 20px;
 }
